--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "stripe/stripe-php": "^6.7"
+        "stripe/stripe-php": "^6.7",
+        "aws/aws-sdk-php": "^3.369"
     }
 }
