--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,24 @@
+# ======================
 # Terraform
+# ======================
 **/.terraform/
 *.tfstate
 *.tfstate.*
 *.backup
+*.tfplan
 
+# ======================
 # OS
+# ======================
 .DS_Store
 Thumbs.db
 
+# ======================
 # Composer
+# ======================
 /vendor/
 
+# ======================
 # Logs
+# ======================
 *.log
