--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -47,12 +47,16 @@ jobs:
           terraform_version: 1.6.6
 
       - name: Terraform Init
-        working-directory: easybank-infra.tf
+        working-directory: easybank-infra
         run: terraform init
 
+      - name: Terraform Plan
+        working-directory: easybank-infra
+        run: terraform plan -out=tfplan
+
       - name: Terraform Apply
-        working-directory: easybank-infra.tf
-        run: terraform apply -auto-approve
+        working-directory: easybank-infra
+        run: terraform apply -auto-approve tfplan
 
       # --------------------
       # Docker & ECR
