--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -4,101 +4,104 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'easybank-infra/**'
+      - 'Dockerfile'
+      - '**/*.php'
+      - 'assets/**'
 
 permissions:
   contents: read
   id-token: write
 
+env:
+  AWS_REGION: ${{ secrets.AWS_REGION }}
+  AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+  ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+  IMAGE_TAG: latest
+  TF_VAR_db_password: ${{ secrets.TF_VAR_db_password }}
+
 jobs:
-  terraform-docker-deploy:
-    name: Provision Infra, Build & Deploy App
+  terraform:
+    name: Provision Infra
     runs-on: ubuntu-latest
-
-    env:
-      AWS_REGION: ${{ secrets.AWS_REGION }}
-      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-      ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-      IMAGE_TAG: latest
-      TF_VAR_db_password: ${{ secrets.TF_VAR_db_password }}
-
+    defaults:
+      run:
+        working-directory: easybank-infra
     steps:
-      # --------------------
-      # Checkout code
-      # --------------------
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # --------------------
-      # AWS Auth
-      # --------------------
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      - uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # --------------------
-      # Terraform
-      # --------------------
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
+      - name: Cache Terraform plugins
+        uses: actions/cache@v3
+        with:
+          path: .terraform/plugin-cache
+          key: terraform-plugins-${{ hashFiles('**/*.tf*') }}
+          restore-keys: terraform-plugins-
+
+      - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
+          terraform_plugin_cache_dir: .terraform/plugin-cache
 
-      - name: Terraform Init
-        working-directory: easybank-infra
-        run: terraform init
+      - run: terraform init -input=false
+      - run: terraform plan -out=tfplan
+      - run: terraform apply -auto-approve tfplan
 
-      - name: Terraform Plan
-        working-directory: easybank-infra
-        run: terraform plan -out=tfplan
+  app:
+    name: Build & Deploy App
+    runs-on: ubuntu-latest
+    needs: terraform
+    defaults:
+      run:
+        working-directory: .
+    steps:
+      - uses: actions/checkout@v4
 
-      - name: Terraform Apply
-        working-directory: easybank-infra
-        run: terraform apply -auto-approve tfplan
+      - uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      # --------------------
-      # Docker & ECR
-      # --------------------
-      - name: Login to Amazon ECR
-        run: |
+      - name: Cache Docker layers
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.docker-cache
+          key: docker-${{ github.sha }}
+          restore-keys: docker-
+
+      - run: |
           aws ecr get-login-password --region $AWS_REGION \
           | docker login --username AWS --password-stdin \
           $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
 
-      - name: Build Docker image
-        run: |
-          docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
+      - run: |
+          docker build --cache-from type=local,src=/tmp/.docker-cache \
+                       --cache-to type=local,dest=/tmp/.docker-cache-new,mode=max \
+                       -t $ECR_REPOSITORY:$IMAGE_TAG .
           docker tag $ECR_REPOSITORY:$IMAGE_TAG \
             $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
+          rm -rf /tmp/.docker-cache
+          mv /tmp/.docker-cache-new /tmp/.docker-cache
 
-      # --------------------
-      # Security Scan
-      # --------------------
-      - name: Trivy Scan Docker image
-        uses: aquasecurity/trivy-action@0.20.0
+      - uses: aquasecurity/trivy-action@0.20.0
         with:
           image-ref: ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
           scanners: vuln
-          severity: CRITICAL,HIGH
+          severity: CRITICAL       # Only fail on CRITICAL vulnerabilities
           ignore-unfixed: true
           exit-code: 1
           format: table
 
-      # --------------------
-      # Push Image
-      # --------------------
-      - name: Push Docker image to ECR
-        run: |
-          docker push \
-            $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
+      - run: docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
 
-      # --------------------
-      # ECS Deployment
-      # --------------------
-      - name: Deploy ECS Service
-        run: |
+      - run: |
           aws ecs update-service \
             --cluster ${{ secrets.ECS_CLUSTER }} \
             --service ${{ secrets.ECS_SERVICE }} \
