--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -20,54 +20,23 @@ env:
   TF_VAR_db_password: ${{ secrets.TF_VAR_db_password }}
 
 # ============================================================
-# Terraform Job
+# Application Job: Build, Scan & Push Docker Image
 # ============================================================
 jobs:
-  terraform:
-    name: Provision Infrastructure
+  build-app:
+    name: Build, Scan & Push Docker Image
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: easybank-infra
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.6.6
-
-      - name: Terraform Init
-        run: terraform init -input=false
-
-      - name: Terraform Plan
-        run: terraform plan -out=tfplan
-
-      - name: Terraform Apply
-        run: terraform apply -auto-approve tfplan
-
-# ============================================================
-# Application Job
-# ============================================================
-  app:
-    name: Build, Scan & Deploy App
-    runs-on: ubuntu-latest
-    needs: terraform
+    outputs:
+      IMAGE_TAG: ${{ steps.set-sha.outputs.IMAGE_TAG }}   # <-- set output
 
     steps:
       - uses: actions/checkout@v4
 
       - name: Set image tag from Git SHA
-        run: echo "IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_ENV
+        id: set-sha
+        run: |
+          echo "IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_ENV
+          echo "IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -88,9 +57,6 @@ jobs:
           docker tag $ECR_REPOSITORY:$IMAGE_TAG \
             $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
 
-      # --------------------------------------------------------
-      # 🔐 Trivy Image Scan (CRITICAL only)
-      # --------------------------------------------------------
       - name: Trivy Image Scan (Fail on CRITICAL)
         uses: aquasecurity/trivy-action@0.20.0
         with:
@@ -109,12 +75,44 @@ jobs:
 
       - name: Push Docker Image to ECR
         run: |
-          docker push \
-            $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
+          docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
 
-      - name: Deploy to ECS
+# ============================================================
+# Terraform Job: Provision Infrastructure using SHA-tagged image
+# ============================================================
+  terraform:
+    name: Provision Infrastructure
+    runs-on: ubuntu-latest
+    needs: build-app  # <-- wait for Docker build
+
+    defaults:
+      run:
+        working-directory: easybank-infra
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.6.6
+
+      - name: Set EASYBANK_IMAGE from build-app output
         run: |
-          aws ecs update-service \
-            --cluster ${{ secrets.ECS_CLUSTER }} \
-            --service ${{ secrets.ECS_SERVICE }} \
-            --force-new-deployment
+          echo "EASYBANK_IMAGE=${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ needs.build-app.outputs.IMAGE_TAG }}" >> $GITHUB_ENV
+
+      - name: Terraform Init
+        run: terraform init -input=false
+
+      - name: Terraform Plan
+        run: terraform plan -out=tfplan -var="easybank_image=$EASYBANK_IMAGE"
+
+      - name: Terraform Apply
+        run: terraform apply -auto-approve tfplan
