--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -19,10 +19,10 @@ env:
   ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
   TF_VAR_db_password: ${{ secrets.TF_VAR_db_password }}
 
-# ============================================================
-# Application Job: Build, Scan & Push Docker Image
-# ============================================================
 jobs:
+  # ============================================================
+  # Build, Scan & Push Docker Image
+  # ============================================================
   build-app:
     name: Build, Scan & Push Docker Image
     runs-on: ubuntu-latest
@@ -51,40 +51,45 @@ jobs:
           | docker login --username AWS --password-stdin \
             $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
 
+      - name: Cache Docker layers
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.docker-cache
+          key: docker-${{ github.sha }}
+          restore-keys: docker-
+
       - name: Build Docker Image
         run: |
-          docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
+          docker build --cache-from type=local,src=/tmp/.docker-cache \
+                       --cache-to type=local,dest=/tmp/.docker-cache-new,mode=max \
+                       -t $ECR_REPOSITORY:$IMAGE_TAG .
           docker tag $ECR_REPOSITORY:$IMAGE_TAG \
             $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
+          mv /tmp/.docker-cache-new /tmp/.docker-cache
 
       - name: Trivy Image Scan (Fail on CRITICAL)
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
-          scan-type: image
+          image-ref: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
           scanners: vuln
           vuln-type: os,library
           severity: CRITICAL
           ignore-unfixed: true
           exit-code: 1
           format: table
-          skip-dirs: |
-            easybank-infra/.terraform
-            .terraform
           hide-progress: true
 
       - name: Push Docker Image to ECR
         run: |
           docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
 
-# ============================================================
-# Terraform Job: Provision Infrastructure using SHA-tagged image
-# ============================================================
+  # ============================================================
+  # Terraform Job: Provision Infrastructure
+  # ============================================================
   terraform:
     name: Provision Infrastructure
     runs-on: ubuntu-latest
     needs: build-app
-
     defaults:
       run:
         working-directory: easybank-infra
@@ -107,7 +112,7 @@ jobs:
       - name: Set EASYBANK_IMAGE for Terraform
         run: |
           IMAGE_TAG=${{ needs.build-app.outputs.IMAGE_TAG }}
-          EASYBANK_IMAGE=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG
+          EASYBANK_IMAGE=${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY}:$IMAGE_TAG
           echo "EASYBANK_IMAGE=$EASYBANK_IMAGE" >> $GITHUB_ENV
 
       - name: Terraform Init
