--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -30,13 +30,15 @@ jobs:
       IMAGE_TAG: ${{ steps.set-sha.outputs.IMAGE_TAG }}
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set image tag from Git SHA
         id: set-sha
         run: |
-          echo "IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_ENV
-          echo "IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+          IMAGE_TAG=${GITHUB_SHA::7}
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -51,17 +53,20 @@ jobs:
           | docker login --username AWS --password-stdin \
             $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
 
-      # ✅ Ensure ECR repo exists (safe on first run)
       - name: Ensure ECR repository exists
         run: |
           aws ecr describe-repositories --repository-names $ECR_REPOSITORY \
           || aws ecr create-repository --repository-name $ECR_REPOSITORY
 
-      # ✅ Enable Docker Buildx
+      # 🔥 CRITICAL FIX: Force Buildx as default builder
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          install: true
 
-      # ✅ Build with Buildx + ECR cache + explicit platform
+      - name: Verify Buildx
+        run: docker buildx ls
+
       - name: Build & Push Docker Image with ECR cache
         run: |
           IMAGE_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY
@@ -99,7 +104,8 @@ jobs:
         working-directory: easybank-infra
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -113,7 +119,7 @@ jobs:
         with:
           terraform_version: 1.6.6
 
-      - name: Set EASYBANK_IMAGE for Terraform
+      - name: Export EASYBANK_IMAGE for Terraform
         run: |
           IMAGE_TAG=${{ needs.build-app.outputs.IMAGE_TAG }}
           EASYBANK_IMAGE=${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY}:$IMAGE_TAG
