--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -21,14 +21,58 @@ env:
 
 jobs:
   # ============================================================
-  # Build, Scan & Push Docker Image (Buildx + ECR cache)
+  # Job 1: Provision Base Infrastructure (including ECR)
   # ============================================================
-  build-app:
-    name: Build, Scan & Push Docker Image
+  terraform:
+    name: Provision Base Infrastructure
     runs-on: ubuntu-latest
     outputs:
-      IMAGE_TAG: ${{ steps.set-sha.outputs.IMAGE_TAG }}
+      ECR_URI: ${{ steps.get-ecr.outputs.ECR_URI }}
+    defaults:
+      run:
+        working-directory: easybank-infra
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.6.6
+
+      - name: Terraform Init & Apply
+        run: |
+          terraform init -input=false
+          terraform validate
+          terraform plan -out=tfplan
+          terraform apply -auto-approve tfplan
+
+      - name: Get ECR Repository URI
+        id: get-ecr
+        run: |
+          REPO_URI=$(terraform output -raw easybank_ecr_url)
+          echo "ECR_URI=$REPO_URI" >> $GITHUB_ENV
+          echo "ECR_URI=$REPO_URI" >> $GITHUB_OUTPUT
+
+  # ============================================================
+  # Job 2: Build Docker Image and Deploy ECS
+  # ============================================================
+  build-and-deploy:
+    name: Build Docker Image & Deploy ECS
+    runs-on: ubuntu-latest
+    needs: terraform
+    outputs:
+      IMAGE_TAG: ${{ steps.set-sha.outputs.IMAGE_TAG }}
+    defaults:
+      run:
+        working-directory: easybank-infra
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -50,19 +94,17 @@ jobs:
       - name: Login to Amazon ECR
         run: |
           aws ecr get-login-password --region $AWS_REGION \
-          | docker login --username AWS --password-stdin \
-            $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+          | docker login --username AWS --password-stdin ${{ needs.terraform.outputs.ECR_URI }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
           install: true
 
-      - name: Build & Push Docker Image with ECR cache
+      - name: Build & Push Docker Image
         run: |
-          IMAGE_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY
+          IMAGE_URI=${{ needs.terraform.outputs.ECR_URI }}
           CACHE_TAG=cache
-
           docker buildx build \
             --platform linux/amd64 \
             --pull \
@@ -75,7 +117,7 @@ jobs:
       - name: Trivy Image Scan (Fail on CRITICAL)
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+          image-ref: ${{ needs.terraform.outputs.ECR_URI }}:${{ env.IMAGE_TAG }}
           scan-type: image
           scanners: vuln
           vuln-type: os,library
@@ -85,46 +127,10 @@ jobs:
           format: table
           hide-progress: true
 
-  # ============================================================
-  # Terraform Job: Provision Infrastructure
-  # ============================================================
-  terraform:
-    name: Provision Infrastructure
-    runs-on: ubuntu-latest
-    needs: build-app
-    defaults:
-      run:
-        working-directory: easybank-infra
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.6.6
-
-      - name: Export EASYBANK_IMAGE for Terraform
+      - name: Deploy ECS with new image
         run: |
-          IMAGE_TAG=${{ needs.build-app.outputs.IMAGE_TAG }}
-          EASYBANK_IMAGE=${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY}:$IMAGE_TAG
-          echo "EASYBANK_IMAGE=$EASYBANK_IMAGE" >> $GITHUB_ENV
-
-      - name: Terraform Init & Validate
-        run: |
+          EASYBANK_IMAGE=${{ needs.terraform.outputs.ECR_URI }}:${{ env.IMAGE_TAG }}
           terraform init -input=false
           terraform validate
-
-      - name: Terraform Plan
-        run: terraform plan -out=tfplan -var="easybank_image=$EASYBANK_IMAGE"
-
-      - name: Terraform Apply
-        run: terraform apply -auto-approve tfplan
+          terraform plan -out=tfplan -var="easybank_image=$EASYBANK_IMAGE"
+          terraform apply -auto-approve tfplan
