--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -68,11 +68,6 @@ jobs:
     name: Build Docker Image & Deploy ECS
     runs-on: ubuntu-latest
     needs: terraform
-    outputs:
-      IMAGE_TAG: ${{ steps.set-sha.outputs.IMAGE_TAG }}
-    defaults:
-      run:
-        working-directory: easybank-infra
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -111,13 +106,13 @@ jobs:
             --progress=plain \
             --cache-from type=registry,ref=$IMAGE_URI:$CACHE_TAG \
             --cache-to type=registry,ref=$IMAGE_URI:$CACHE_TAG,mode=max \
-            -t $IMAGE_URI:$IMAGE_TAG \
+            -t $IMAGE_URI:${{ steps.set-sha.outputs.IMAGE_TAG }} \
             --push .
 
       - name: Trivy Image Scan (Fail on CRITICAL)
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: ${{ needs.terraform.outputs.ECR_URI }}:${{ env.IMAGE_TAG }}
+          image-ref: ${{ needs.terraform.outputs.ECR_URI }}:${{ steps.set-sha.outputs.IMAGE_TAG }}
           scan-type: image
           scanners: vuln
           vuln-type: os,library
@@ -129,8 +124,8 @@ jobs:
 
       - name: Deploy ECS with new image
         run: |
-          EASYBANK_IMAGE=${{ needs.terraform.outputs.ECR_URI }}:${{ env.IMAGE_TAG }}
           terraform init -input=false
           terraform validate
-          terraform plan -out=tfplan -var="easybank_image=$EASYBANK_IMAGE"
+          terraform plan -out=tfplan \
+            -var="easybank_image=${{ needs.terraform.outputs.ECR_URI }}:${{ steps.set-sha.outputs.IMAGE_TAG }}"
           terraform apply -auto-approve tfplan
