--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -59,7 +59,6 @@ jobs:
         run: |
           ECR_URI=$(terraform output -raw easybank_ecr_url)
           echo "ECR_URI=$ECR_URI" >> $GITHUB_OUTPUT
-          echo "ECR_URI=$ECR_URI" >> $GITHUB_ENV
 
 # ============================================================
 # JOB 2: BUILD & PUSH DOCKER IMAGE
@@ -68,15 +67,18 @@ jobs:
     name: Build & Push Docker Image
     runs-on: ubuntu-latest
     needs: terraform-base
+    outputs:
+      IMAGE_TAG: ${{ steps.image-tag.outputs.IMAGE_TAG }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set Image Tag (Git SHA)
+        id: image-tag
         run: |
           IMAGE_TAG=${GITHUB_SHA::7}
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -87,20 +89,21 @@ jobs:
 
       - name: Login to Amazon ECR
         run: |
-          aws ecr get-login-password --region $AWS_REGION \
-          | docker login --username AWS --password-stdin ${{ needs.terraform-base.outputs.ECR_URI }}
+          aws ecr get-login-password --region $AWS_REGION | \
+          docker login --username AWS --password-stdin \
+          $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
 
       - name: Build & Push Docker Image
         run: |
           docker build \
-            -t ${{ needs.terraform-base.outputs.ECR_URI }}:$IMAGE_TAG .
+            -t ${{ needs.terraform-base.outputs.ECR_URI }}:${{ steps.image-tag.outputs.IMAGE_TAG }} .
           docker push \
-            ${{ needs.terraform-base.outputs.ECR_URI }}:$IMAGE_TAG
+            ${{ needs.terraform-base.outputs.ECR_URI }}:${{ steps.image-tag.outputs.IMAGE_TAG }}
 
       - name: Trivy Image Scan (Fail on CRITICAL)
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: ${{ needs.terraform-base.outputs.ECR_URI }}:$IMAGE_TAG
+          image-ref: ${{ needs.terraform-base.outputs.ECR_URI }}:${{ steps.image-tag.outputs.IMAGE_TAG }}
           scan-type: image
           severity: CRITICAL
           exit-code: 1
@@ -137,7 +140,7 @@ jobs:
 
       - name: Deploy ECS with Git SHA Image
         run: |
-          IMAGE_URI=${{ needs.terraform-base.outputs.ECR_URI }}:$IMAGE_TAG
+          IMAGE_URI=${{ needs.terraform-base.outputs.ECR_URI }}:${{ needs.build-image.outputs.IMAGE_TAG }}
           terraform init -input=false
           terraform validate
           terraform plan \
