--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -12,6 +12,7 @@ env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
   TF_VAR_db_password: ${{ secrets.TF_VAR_db_password }}
+  ECR_REPO_NAME: easybank
 
 jobs:
 # ============================================================
@@ -23,9 +24,9 @@ jobs:
     defaults:
       run:
         working-directory: easybank-infra
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -34,8 +35,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
+      - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
 
@@ -53,16 +53,30 @@ jobs:
     runs-on: ubuntu-latest
     needs: terraform-base
     outputs:
-      IMAGE_TAG: ${{ steps.image-tag.outputs.IMAGE_TAG }}
+      IMAGE_TAG: ${{ steps.set-tag.outputs.IMAGE_TAG }}
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set Image Tag (Git SHA)
-        id: image-tag
+        id: set-tag
         run: |
           IMAGE_TAG=${GITHUB_SHA::7}
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT
+
+      - name: Set ECR URI
+        run: |
+          ECR_URI="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_NAME"
+          echo "ECR_URI=$ECR_URI" >> $GITHUB_ENV
+          echo "Using ECR: $ECR_URI"
+
+      - name: Validate image variables
+        run: |
+          if [ -z "$IMAGE_TAG" ] || [ -z "$ECR_URI" ]; then
+            echo "ERROR: IMAGE_TAG or ECR_URI is empty"
+            exit 1
+          fi
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -70,12 +84,6 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
-
-      - name: Set ECR Repository URI (deterministic)
-        run: |
-          ECR_URI="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/easybank"
-          echo "ECR_URI=$ECR_URI" >> $GITHUB_ENV
-          echo "Using ECR repo: $ECR_URI"
 
       - name: Login to Amazon ECR
         run: |
@@ -86,13 +94,14 @@ jobs:
       - name: Build & Push Docker Image
         run: |
           IMAGE_URI="$ECR_URI:$IMAGE_TAG"
-          docker build -t $IMAGE_URI .
-          docker push $IMAGE_URI
+          echo "Building $IMAGE_URI"
+          docker build -t "$IMAGE_URI" .
+          docker push "$IMAGE_URI"
 
       - name: Trivy Image Scan (Fail on CRITICAL)
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: ${{ env.ECR_URI }}:${{ steps.image-tag.outputs.IMAGE_TAG }}
+          image-ref: ${{ env.ECR_URI }}:${{ env.IMAGE_TAG }}
           scan-type: image
           severity: CRITICAL
           exit-code: 1
@@ -109,9 +118,9 @@ jobs:
     defaults:
       run:
         working-directory: easybank-infra
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -120,14 +129,13 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
+      - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
 
-      - name: Deploy ECS with Git SHA Image
+      - name: Deploy ECS with Image
         run: |
-          IMAGE_URI="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/easybank:${{ needs.build-image.outputs.IMAGE_TAG }}"
+          IMAGE_URI="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_NAME:${{ needs.build-image.outputs.IMAGE_TAG }}"
           terraform init -input=false
           terraform validate
           terraform plan -var="easybank_image=$IMAGE_URI" -out=tfplan
