--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -14,13 +14,14 @@ env:
   TF_VAR_db_password: ${{ secrets.TF_VAR_db_password }}
   ECR_REPO_NAME: easybank
 
+# ============================================================
+# JOB 1: BASE INFRA (RUN ONCE / CONTROLLED)
+# ============================================================
 jobs:
-# ============================================================
-# JOB 1: BASE INFRA (VPC, ALB, RDS, ECS, ECR)
-# ============================================================
   terraform-base:
     name: Provision Base Infrastructure
     runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
     defaults:
       run:
         working-directory: easybank-infra
@@ -28,8 +29,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      - uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -39,80 +39,61 @@ jobs:
         with:
           terraform_version: 1.6.6
 
-      - name: Terraform Init / Validate / Apply
+      - name: Terraform Init / Apply
         run: |
           terraform init -input=false
-          terraform validate
           terraform apply -auto-approve
 
 # ============================================================
-# JOB 2: BUILD & PUSH DOCKER IMAGE
+# JOB 2: BUILD & PUSH IMAGE
 # ============================================================
   build-image:
     name: Build & Push Docker Image
     runs-on: ubuntu-latest
-    needs: terraform-base
+
     outputs:
       IMAGE_TAG: ${{ steps.set-tag.outputs.IMAGE_TAG }}
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set Image Tag (Git SHA)
+      - name: Set Image Tag
         id: set-tag
         run: |
           IMAGE_TAG=${GITHUB_SHA::7}
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT
 
-      - name: Set ECR URI
-        run: |
-          ECR_URI="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_NAME"
-          echo "ECR_URI=$ECR_URI" >> $GITHUB_ENV
-          echo "Using ECR: $ECR_URI"
-
-      - name: Validate image variables
-        run: |
-          if [ -z "$IMAGE_TAG" ] || [ -z "$ECR_URI" ]; then
-            echo "ERROR: IMAGE_TAG or ECR_URI is empty"
-            exit 1
-          fi
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      - uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Login to Amazon ECR
+      - name: Login to ECR
         run: |
           aws ecr get-login-password --region $AWS_REGION | \
           docker login --username AWS --password-stdin \
           $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
 
-      - name: Build & Push Docker Image
+      - name: Build & Push Image
         run: |
-          IMAGE_URI="$ECR_URI:$IMAGE_TAG"
-          echo "Building $IMAGE_URI"
+          IMAGE_URI="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_NAME:${{ steps.set-tag.outputs.IMAGE_TAG }}"
           docker build -t "$IMAGE_URI" .
           docker push "$IMAGE_URI"
 
-      - name: Trivy Image Scan (Fail on CRITICAL)
+      - name: Trivy Scan (Critical only)
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: ${{ env.ECR_URI }}:${{ env.IMAGE_TAG }}
-          scan-type: image
+          image-ref: ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO_NAME }}:${{ steps.set-tag.outputs.IMAGE_TAG }}
           severity: CRITICAL
           exit-code: 1
           ignore-unfixed: true
-          hide-progress: true
 
 # ============================================================
-# JOB 3: DEPLOY ECS (IMAGE-DRIVEN)
+# JOB 3: DEPLOY ECS (IMAGE-ONLY CHANGE)
 # ============================================================
   deploy-ecs:
-    name: Deploy ECS with New Image
+    name: Deploy to ECS
     runs-on: ubuntu-latest
     needs: build-image
     defaults:
@@ -122,8 +103,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      - uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -133,10 +113,15 @@ jobs:
         with:
           terraform_version: 1.6.6
 
-      - name: Deploy ECS with Image
+      - name: Deploy ECS Service
         run: |
           IMAGE_URI="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO_NAME:${{ needs.build-image.outputs.IMAGE_TAG }}"
           terraform init -input=false
-          terraform validate
           terraform plan -var="easybank_image=$IMAGE_URI" -out=tfplan
           terraform apply -auto-approve tfplan
+
+      - name: Wait for ECS Stability
+        run: |
+          aws ecs wait services-stable \
+            --cluster easybank-cluster \
+            --services easybank-service
